# fastapi_scalabilit_iin_mind_tutorial

services/todo_api/: .flake8  pyproject.toml
services/todo_api/tests/integration/test_backend_api/: test_main.py
