[tool.poetry]
name = "todo-api"
version = "0.1.0"
description = "Fastapi setup"
authors = ["Princekrampah <jsksprince@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
black = "^24.4.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
bandit = "^1.7.8"
safety = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
